[package]
name = "equity_calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teapy = {git = "https://github.com/Teamon9161/teapy.git", branch="master"}
# teapy = {path="../teapy"}
pyo3 = {version = "0.18.0", features = ["extension-module", "abi3-py38", "macros"]}
numpy = "0.18"
ahash = "0.8.2"
ndarray = {features=['rayon'], version="0.15"}